syntax = "proto3";

package raftpb;

message RequestVoteArgs {
    uint64 term = 1;
    uint64 candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteReply {
    uint64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesArgs {
    uint64 term = 1;
    uint64 leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    uint64 leader_commit = 5;
    repeated uint64 entries_term = 6;
    repeated bytes entries = 7;
}

message AppendEntriesReply {
    uint64 term = 1;
    bool success = 2;
    uint64 x_idx = 3;
    uint64 x_term = 4;
}

service Raft {
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply) {
    }
    rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply) {
    }
}
